--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,9 @@
         <script src="js/app.js"></script>
         <script src="js/controllers.js"></script>
     </head>
-    <body ng-controller="HomePageController">
-        <h1>Welcome! {{ title }}</h1>
+    <body>
+        <div id="container" ng-view>
+            
+        </div>
     </body>
 </html>
