Fix data, change json data format

--- a/views/partials/gamePreview.html
+++ b/views/partials/gamePreview.html
@@ -3,8 +3,8 @@
     <a href="#/{{nextId}}">&gt;</a>
     <ul>
         <li>
-            <a href="/game/{{gameId}}"><img ng-src="img/{{gamesList[gameId].shortname}}_tn.jpg"/></a>
-            <a href="/game/{{gameId}}"><h2>{{ gamesList[gameId].title }}</h2></a>
+            <a href="/game/{{gamedbId}}"><img ng-src="img/{{gamesList[gameId].shortname}}_tn.jpg"/></a>
+            <a href="/game/{{gamedbId}}"><h2>{{ gamesList[gameId].title }}</h2></a>
         </li>
     </ul>
 </section>
