--- a/views/gamePage.ejs
+++ b/views/gamePage.ejs
@@ -8,20 +8,20 @@
         <div id="container">
             <section id="gamePage">
                 <div id="gameImage">
-                    <img src="../img/<%= jsonData[gameId].shortname %>.jpg"/>
+                    <img src="../img/<%= jsonData[gameId-1].shortname %>.jpg"/>
                 </div>
                 <section id="gameInfo">
-                    <h2><%= jsonData[gameId].title %></h2>
-                    <p><%= jsonData[gameId].description %></p>
+                    <h2><%= jsonData[gameId-1].title %></h2>
+                    <p><%= jsonData[gameId-1].description %></p>
                 </section>
                 <div id="gameNotes">                    
-                    <form method="post" action="/addNote/<%= jsonData[gameId].id %>">
+                    <form method="post" action="/addNote/<%= jsonData[gameId-1].id %>">
                         <input type="text" name="content"/>
                         <input type="submit" name="submit" value="+"/>
                     </form>
                     <ul>
-                        <% for(var i = 0; i < jsonData[gameId].notes.length; ++i) {%>
-                        <li><%= jsonData[gameId].notes[i] %> <a href="#">-</a></li>
+                        <% for(var i = 0; i < notes.length; ++i) {%>
+                        <li><%= notes[i].content %> <a href="#">-</a></li>
                         <% } %>
                     </ul>
                 </div>
