--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
         <title>Game Note</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css"/>
+        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
         <script src="https://code.angularjs.org/1.5.7/angular-route.min.js"></script>
         <script src="js/app.js"></script>
